[gd_scene load_steps=7 format=2]

[ext_resource path="res://cenas/covid.gd" type="Script" id=1]
[ext_resource path="res://sprites/covid.png" type="Texture" id=2]
[ext_resource path="res://sounds/hurt.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[sub_resource type="CircleShape2D" id=2]
radius = 61.6991

[sub_resource type="CircleShape2D" id=3]
radius = 14.0

[node name="denv" type="KinematicBody2D" groups=["danavel"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["danavel"]]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Covid" type="Sprite" parent="."]
position = Vector2( 2, 3 )
scale = Vector2( 0.859375, 0.859375 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
shape = SubResource( 3 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
